# bitcoin_rnd

./: .dockerignore  .gitignore  CMakeLists.txt  configure.ac  test_backpressure.cpp
.github/workflows/: benchmark.yml
ci/test/: 00_setup_env_i686_centos.sh  00_setup_env_i686_multiprocess.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_win64.sh
contrib/docker/: Dockerfile.benchmark
contrib/perf/: README.md  add_serializers.py  benchmark_results.json  benchmark_results_block_timing.json  benchmark_results_full_pipeline.json  benchmark_results_ipc.json  benchmark_results_mempool_monitor.json  benchmark_results_real_sdk.json  benchmark_results_real_worker.json  run_benchmark.sh  run_benchmark_isolated.py  run_comparison.sh  run_ebpf_benchmark_docker.py  run_ebpf_vs_ipc_benchmark.py  run_ipc_benchmark_suite.py  run_ipc_benchmark_suite_full.py  run_reindex_benchmark.py  stdio_bus_benchmark.py  stdiobus_trace.json  trace_consumer.py
contrib/tracing/: all_tracepoints_ebpf_recorder.py  compare_latency.py  mempool_monitor_ipc.py  test_compare_latency.py
doc/: release-notes.md
doc/design/: stdio_bus_integration.md  stdio_bus_rfc.md
doc/man/: bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  (+1 more)
src/: CMakeLists.txt  coins.cpp  httprpc.cpp  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  net.cpp  net.h  net_processing.cpp  net_processing.h  txmempool.cpp  txmempool.h  txrequest.cpp  validation.cpp
src/stdio_bus/: CMakeLists.txt  README.md
src/stdio_bus/docs/: README.md
src/stdio_bus/docs/00-overview/: 01-what-is-stdio-bus.md  02-invariants-and-guarantees.md
src/stdio_bus/docs/01-getting-started/: 03-quickstart-unix-socket.md
src/stdio_bus/docs/02-core-concepts/: 01-lifecycle-state-machine.md  02-callbacks-contract.md  03-event-loop-step-model.md  04-error-model.md  05-thread-safety-matrix.md
src/stdio_bus/docs/05-operating-modes/: 01-mode-capability-matrix.md
src/stdio_bus/docs/06-integration-patterns/: 01-retry-timeout-circuit-breaker.md
src/stdio_bus/docs/07-use-cases/: 01-complete-capabilities.md
src/stdio_bus/examples/: CMakeLists.txt  async.cpp  basic.cpp  builder.cpp  runner.cpp
src/stdio_bus/include/: stdio_bus_embed.h
src/stdio_bus/src/: bus.cpp  stub.c
src/stdio_bus/tests/: CMakeLists.txt  test_async.cpp  test_bus.cpp  test_error.cpp  test_ffi.cpp  test_types.cpp
test/: config.ini
(+105 files in other folders)
